fixed intro title font-size on mobile

--- a/sass/layout/_intro.scss
+++ b/sass/layout/_intro.scss
@@ -27,8 +27,8 @@
     }
 
     &__title {
-        font-size: 3.75rem;
-        font-size: clamp(3.75rem, 1.125rem + 11.2vw, 8.125rem);
+        font-size: 5rem;
+        font-size: clamp(5rem, 3.125rem + 8vw, 8.125rem);
         margin-block-start: .25em;
         
 
